# Auth_1_M3S1

./: .env.docker  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.debug.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: auth.yml  etl.yml  movies_api.yml
auth/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.debug.yml  main.py  pyproject.toml
auth/auth/: main.py
auth/core/: config.py  exceptions.py  manage.py
auth/db/: fixtures.py  postgres.py
auth/envs/: .env.docker  .env.example  .env.test
auth/migrations/: env.py
auth/models/: entry.py  history.py  mixins.py  permission.py  role.py  user.py
auth/repositories/: entry.py  role.py  user.py
auth/schemas/: common.py  permission.py  role.py  user.py  user_auth.py
auth/services/: jwt.py  permission.py  role.py  user.py
auth/tests/: conftest.py
envs/: .env.docker  .env.example  .env.test
etl/: .env.docker  .env.example
infra/auth-nginx/: nginx.conf
infra/postgres/: .env.example
migrations/: env.py
migrations/versions/: 2024_04_29_1638-5c5d16a26f0f_initial.py  2024_04_29_1708-9a2e8848d8c3_admin_role_and_permissions.py
movies_admin/: .dockerignore  .env.docker  .env.example  Dockerfile  docker-compose.yml  requirements.txt  uwsgi.ini
movies_admin/config/: .env.example  settings.py  urls.py
movies_admin/movies/: admin.py  models.py
movies_admin/users/: apps.py  auth.py  models.py
movies_api/: .env.docker  .env.example  pyproject.toml
src/: main.py
src/core/: config.py
(+81 files in other folders)
