[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "2.9.9"
faker = "25.0.1"
flake8 = "7.0.0"
python-dotenv = "^1.0.1"
django-split-settings = "1.2.0"
django = "4.2.9"
django-debug-toolbar = "4.2.0"
django-postgres-extra = "2.0.8"
django-extensions = "3.2.3"
django-cors-headers = "4.3.1"
uwsgi = "2.0.24"
python-jose = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
